// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration snapshots > album × dalle3 1`] = `
{
  "full": "Mountain silhouette, Indie aesthetic, square 1:1, album cover quality, cinematic lighting, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Mountain silhouette, Indie aesthetic, square 1:1, album cover quality, cinematic lighting, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > album × midjourney 1`] = `
{
  "full": "Mountain silhouette, Indie aesthetic, square 1:1, album cover quality, cinematic lighting, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Mountain silhouette, Indie aesthetic, square 1:1, album cover quality, cinematic lighting, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > album × stable-diffusion 1`] = `
{
  "full": "Mountain silhouette, Indie aesthetic, square 1:1, album cover quality, cinematic lighting, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Mountain silhouette, Indie aesthetic, square 1:1, album cover quality, cinematic lighting, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > bookcover × dalle3 1`] = `
{
  "full": "Lighthouse book cover artwork, Gothic genre aesthetic, portrait, editorial quality, high detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Lighthouse book cover artwork, Gothic genre aesthetic, portrait, editorial quality, high detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > bookcover × midjourney 1`] = `
{
  "full": "Lighthouse book cover artwork, Gothic genre aesthetic, portrait, editorial quality, high detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Lighthouse book cover artwork, Gothic genre aesthetic, portrait, editorial quality, high detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > bookcover × stable-diffusion 1`] = `
{
  "full": "Lighthouse book cover artwork, Gothic genre aesthetic, portrait, editorial quality, high detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Lighthouse book cover artwork, Gothic genre aesthetic, portrait, editorial quality, high detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > brand × dalle3 1`] = `
{
  "full": ""Nebula Labs" brand logo design, Star as the central brand mark symbol, the text "Nebula Labs" must be prominently displayed, transparent background, scalable, vector quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": ""Nebula Labs" brand logo design, Star as the central brand mark symbol, the text "Nebula Labs" must be prominently displayed, transparent background, scalable, vector quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > brand × midjourney 1`] = `
{
  "full": ""Nebula Labs" brand logo design, Star as the central brand mark symbol, the text "Nebula Labs" must be prominently displayed, transparent background, scalable, vector quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": ""Nebula Labs" brand logo design, Star as the central brand mark symbol, the text "Nebula Labs" must be prominently displayed, transparent background, scalable, vector quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > brand × stable-diffusion 1`] = `
{
  "full": ""Nebula Labs" brand logo design, Star as the central brand mark symbol, the text "Nebula Labs" must be prominently displayed, transparent background, scalable, vector quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": ""Nebula Labs" brand logo design, Star as the central brand mark symbol, the text "Nebula Labs" must be prominently displayed, transparent background, scalable, vector quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > carwrap × dalle3 1`] = `
{
  "full": "Digital camo vehicle wrap, on BMW M3, side profile, showroom quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Digital camo vehicle wrap, on BMW M3, side profile, showroom quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > carwrap × midjourney 1`] = `
{
  "full": "Digital camo vehicle wrap, on BMW M3, side profile, showroom quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Digital camo vehicle wrap, on BMW M3, side profile, showroom quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > carwrap × stable-diffusion 1`] = `
{
  "full": "Digital camo vehicle wrap, on BMW M3, side profile, showroom quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Digital camo vehicle wrap, on BMW M3, side profile, showroom quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > character × dalle3 1`] = `
{
  "full": "Steampunk inventor character design, full body, character sheet, clean background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Steampunk inventor character design, full body, character sheet, clean background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > character × midjourney 1`] = `
{
  "full": "Steampunk inventor character design, full body, character sheet, clean background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Steampunk inventor character design, full body, character sheet, clean background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > character × stable-diffusion 1`] = `
{
  "full": "Steampunk inventor character design, full body, character sheet, clean background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Steampunk inventor character design, full body, character sheet, clean background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > clothing × dalle3 1`] = `
{
  "full": "Roaring lion design, Streetwear style, isolated centered composition, print-ready, high detail, clean edges, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Roaring lion design, Streetwear style, isolated centered composition, print-ready, high detail, clean edges, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > clothing × midjourney 1`] = `
{
  "full": "Roaring lion design, Streetwear style, isolated centered composition, print-ready, high detail, clean edges, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Roaring lion design, Streetwear style, isolated centered composition, print-ready, high detail, clean edges, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > clothing × stable-diffusion 1`] = `
{
  "full": "Roaring lion design, Streetwear style, isolated centered composition, print-ready, high detail, clean edges, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Roaring lion design, Streetwear style, isolated centered composition, print-ready, high detail, clean edges, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > collection × dalle3 1`] = `
{
  "full": "Skull design, part of Dark Royalty series, consistent composition, series-ready, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Skull design, part of Dark Royalty series, consistent composition, series-ready, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > collection × midjourney 1`] = `
{
  "full": "Skull design, part of Dark Royalty series, consistent composition, series-ready, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Skull design, part of Dark Royalty series, consistent composition, series-ready, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > collection × stable-diffusion 1`] = `
{
  "full": "Skull design, part of Dark Royalty series, consistent composition, series-ready, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Skull design, part of Dark Royalty series, consistent composition, series-ready, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > freestyle × dalle3 1`] = `
{
  "full": "Neon samurai, Cyberpunk style, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Neon samurai, Cyberpunk style, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > freestyle × midjourney 1`] = `
{
  "full": "Neon samurai, Cyberpunk style, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Neon samurai, Cyberpunk style, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > freestyle × stable-diffusion 1`] = `
{
  "full": "Neon samurai, Cyberpunk style, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Neon samurai, Cyberpunk style, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > jewelry × dalle3 1`] = `
{
  "full": "Ring jewelry design, Art Deco style, professional jewelry photography, studio lighting, macro detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Ring jewelry design, Art Deco style, professional jewelry photography, studio lighting, macro detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > jewelry × midjourney 1`] = `
{
  "full": "Ring jewelry design, Art Deco style, professional jewelry photography, studio lighting, macro detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Ring jewelry design, Art Deco style, professional jewelry photography, studio lighting, macro detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > jewelry × stable-diffusion 1`] = `
{
  "full": "Ring jewelry design, Art Deco style, professional jewelry photography, studio lighting, macro detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Ring jewelry design, Art Deco style, professional jewelry photography, studio lighting, macro detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > marketing × dalle3 1`] = `
{
  "full": "marketing visual for Smart Watch, Tech minimal visual style, advertising quality, commercial grade, attention-grabbing, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "marketing visual for Smart Watch, Tech minimal visual style, advertising quality, commercial grade, attention-grabbing, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > marketing × midjourney 1`] = `
{
  "full": "marketing visual for Smart Watch, Tech minimal visual style, advertising quality, commercial grade, attention-grabbing, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "marketing visual for Smart Watch, Tech minimal visual style, advertising quality, commercial grade, attention-grabbing, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > marketing × stable-diffusion 1`] = `
{
  "full": "marketing visual for Smart Watch, Tech minimal visual style, advertising quality, commercial grade, attention-grabbing, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "marketing visual for Smart Watch, Tech minimal visual style, advertising quality, commercial grade, attention-grabbing, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > meme × dalle3 1`] = `
{
  "full": "Surprised capybara, Photorealistic style, expressive, shareable, reaction image quality, meme-ready, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Surprised capybara, Photorealistic style, expressive, shareable, reaction image quality, meme-ready, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > meme × midjourney 1`] = `
{
  "full": "Surprised capybara, Photorealistic style, expressive, shareable, reaction image quality, meme-ready, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Surprised capybara, Photorealistic style, expressive, shareable, reaction image quality, meme-ready, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > meme × stable-diffusion 1`] = `
{
  "full": "Surprised capybara, Photorealistic style, expressive, shareable, reaction image quality, meme-ready, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Surprised capybara, Photorealistic style, expressive, shareable, reaction image quality, meme-ready, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > mockup × dalle3 1`] = `
{
  "full": "product photography of Ceramic mug, on Wood table, commercial quality, professional product shot, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "product photography of Ceramic mug, on Wood table, commercial quality, professional product shot, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > mockup × midjourney 1`] = `
{
  "full": "product photography of Ceramic mug, on Wood table, commercial quality, professional product shot, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "product photography of Ceramic mug, on Wood table, commercial quality, professional product shot, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > mockup × stable-diffusion 1`] = `
{
  "full": "product photography of Ceramic mug, on Wood table, commercial quality, professional product shot, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "product photography of Ceramic mug, on Wood table, commercial quality, professional product shot, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > pattern × dalle3 1`] = `
{
  "full": "seamless tileable pattern, Tropical leaves motif, Minimal technique, seamless repeat, fabric-ready, no visible edges, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "seamless tileable pattern, Tropical leaves motif, Minimal technique, seamless repeat, fabric-ready, no visible edges, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > pattern × midjourney 1`] = `
{
  "full": "seamless tileable pattern, Tropical leaves motif, Minimal technique, seamless repeat, fabric-ready, no visible edges, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "seamless tileable pattern, Tropical leaves motif, Minimal technique, seamless repeat, fabric-ready, no visible edges, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > pattern × stable-diffusion 1`] = `
{
  "full": "seamless tileable pattern, Tropical leaves motif, Minimal technique, seamless repeat, fabric-ready, no visible edges, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "seamless tileable pattern, Tropical leaves motif, Minimal technique, seamless repeat, fabric-ready, no visible edges, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > pin × dalle3 1`] = `
{
  "full": "Sleeping fox enamel pin design, Cute, gold metal outlines, flat enamel fills, white background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Sleeping fox enamel pin design, Cute, gold metal outlines, flat enamel fills, white background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > pin × midjourney 1`] = `
{
  "full": "Sleeping fox enamel pin design, Cute, gold metal outlines, flat enamel fills, white background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Sleeping fox enamel pin design, Cute, gold metal outlines, flat enamel fills, white background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > pin × stable-diffusion 1`] = `
{
  "full": "Sleeping fox enamel pin design, Cute, gold metal outlines, flat enamel fills, white background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Sleeping fox enamel pin design, Cute, gold metal outlines, flat enamel fills, white background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > poster × dalle3 1`] = `
{
  "full": "Music festival poster design, Psychedelic, portrait orientation, print-ready, high impact, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Music festival poster design, Psychedelic, portrait orientation, print-ready, high impact, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > poster × midjourney 1`] = `
{
  "full": "Music festival poster design, Psychedelic, portrait orientation, print-ready, high impact, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Music festival poster design, Psychedelic, portrait orientation, print-ready, high impact, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > poster × stable-diffusion 1`] = `
{
  "full": "Music festival poster design, Psychedelic, portrait orientation, print-ready, high impact, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Music festival poster design, Psychedelic, portrait orientation, print-ready, high impact, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > sneaker × dalle3 1`] = `
{
  "full": "Air Max 1 sneaker concept, Y2K design, side profile, white background, sharp detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Air Max 1 sneaker concept, Y2K design, side profile, white background, sharp detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > sneaker × midjourney 1`] = `
{
  "full": "Air Max 1 sneaker concept, Y2K design, side profile, white background, sharp detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Air Max 1 sneaker concept, Y2K design, side profile, white background, sharp detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > sneaker × stable-diffusion 1`] = `
{
  "full": "Air Max 1 sneaker concept, Y2K design, side profile, white background, sharp detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Air Max 1 sneaker concept, Y2K design, side profile, white background, sharp detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > social × dalle3 1`] = `
{
  "full": "Coffee aesthetic, Cozy tone, social media ready, 1:1 square aspect ratio, high quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Coffee aesthetic, Cozy tone, social media ready, 1:1 square aspect ratio, high quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > social × midjourney 1`] = `
{
  "full": "Coffee aesthetic, Cozy tone, social media ready, 1:1 square aspect ratio, high quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Coffee aesthetic, Cozy tone, social media ready, 1:1 square aspect ratio, high quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > social × stable-diffusion 1`] = `
{
  "full": "Coffee aesthetic, Cozy tone, social media ready, 1:1 square aspect ratio, high quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Coffee aesthetic, Cozy tone, social media ready, 1:1 square aspect ratio, high quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > sticker × dalle3 1`] = `
{
  "full": "Cat astronaut sticker design, Kawaii style, thick outlines, flat colors, die-cut ready, transparent background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Cat astronaut sticker design, Kawaii style, thick outlines, flat colors, die-cut ready, transparent background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > sticker × midjourney 1`] = `
{
  "full": "Cat astronaut sticker design, Kawaii style, thick outlines, flat colors, die-cut ready, transparent background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Cat astronaut sticker design, Kawaii style, thick outlines, flat colors, die-cut ready, transparent background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > sticker × stable-diffusion 1`] = `
{
  "full": "Cat astronaut sticker design, Kawaii style, thick outlines, flat colors, die-cut ready, transparent background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Cat astronaut sticker design, Kawaii style, thick outlines, flat colors, die-cut ready, transparent background, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > tattoo × dalle3 1`] = `
{
  "full": "Koi fish tattoo design, Japanese tattoo style, clean white background, crisp lines, tattoo flash sheet quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Koi fish tattoo design, Japanese tattoo style, clean white background, crisp lines, tattoo flash sheet quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > tattoo × midjourney 1`] = `
{
  "full": "Koi fish tattoo design, Japanese tattoo style, clean white background, crisp lines, tattoo flash sheet quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Koi fish tattoo design, Japanese tattoo style, clean white background, crisp lines, tattoo flash sheet quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > tattoo × stable-diffusion 1`] = `
{
  "full": "Koi fish tattoo design, Japanese tattoo style, clean white background, crisp lines, tattoo flash sheet quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Koi fish tattoo design, Japanese tattoo style, clean white background, crisp lines, tattoo flash sheet quality, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > threeD × dalle3 1`] = `
{
  "full": "3D render of Crystal, Glass material, high-quality 3D render, octane render quality, 8K detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "3D render of Crystal, Glass material, high-quality 3D render, octane render quality, 8K detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > threeD × midjourney 1`] = `
{
  "full": "3D render of Crystal, Glass material, high-quality 3D render, octane render quality, 8K detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "3D render of Crystal, Glass material, high-quality 3D render, octane render quality, 8K detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > threeD × stable-diffusion 1`] = `
{
  "full": "3D render of Crystal, Glass material, high-quality 3D render, octane render quality, 8K detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "3D render of Crystal, Glass material, high-quality 3D render, octane render quality, 8K detail, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > wallpaper × dalle3 1`] = `
{
  "full": "Sakura tree, Watercolor, phone 9:16 portrait aspect ratio, wallpaper, high resolution, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation. Avoid: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Sakura tree, Watercolor, phone 9:16 portrait aspect ratio, wallpaper, high resolution, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > wallpaper × midjourney 1`] = `
{
  "full": "Sakura tree, Watercolor, phone 9:16 portrait aspect ratio, wallpaper, high resolution, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation --no blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Sakura tree, Watercolor, phone 9:16 portrait aspect ratio, wallpaper, high resolution, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;

exports[`integration snapshots > wallpaper × stable-diffusion 1`] = `
{
  "full": "Sakura tree, Watercolor, phone 9:16 portrait aspect ratio, wallpaper, high resolution, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation
Negative prompt: blurry, low quality",
  "negative": "blurry, low quality",
  "parameters": "",
  "positive": "Sakura tree, Watercolor, phone 9:16 portrait aspect ratio, wallpaper, high resolution, dramatic lighting, color palette: warm tones, 8K, detailed, trending on ArtStation",
}
`;
